# frappe-bench

./: .gitignore  AGRI_DEMO_COMPLETE.md  AGRI_DEMO_SETUP.md  BUSINESS_HOURS_QUICK_START.md  BUSINESS_HOURS_SETUP.md  COMPREHENSIVE_SECURITY_AUDIT.md  CONTRIBUTING.md  FIX_SSL_ISSUE.md  HARDCODED_BRANDING_SUMMARY.md  HOW_TO_CHANGE_PHONE_MESSAGE.md  IMPLEMENTATION_SUMMARY.md  PHONE_MESSAGE_CHANGES_SUMMARY.md  PHONE_RECORDING_FIX.md  README.md  README_SSL_SETUP.md  REBRANDING_SUMMARY.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_RECOMMENDATIONS.md  UI_UX_OVERHAUL_SUMMARY.md  add_all_modules_demo.py  add_comprehensive_demo.py  add_comprehensive_demo_fixed.py  add_demo_data.py  bench.toml  certbot-renewal-wrapper.sh  check_css_loading.html  fix_nginx_ocsp.sh  fix_onboarding.sh  fix_onboarding_all_sites.sh  fix_onboarding_error.py  fix_onboarding_quick.py  fix_ssl_proper.sh  frappe_tune.sh  refresh.sh  refresh.sh.backup  renew_ssl_certs.sh  run_demo_data.py  saas_admin.sh  setup_agri_ssl.sh  (+7 more)
apps/modern_erp_ui/: FIX_MAINTENANCE_ERROR.md  FIX_MODULE_ONBOARDING.md  INSTALLATION.md  QUICK_FIX.md  README.md  REMOVE_FROM_APPS_TXT.sh  package.json  pyproject.toml  setup.sh
apps/modern_erp_ui/modern_erp_ui/: commands.py  hooks.py
apps/next_ai/: .gitignore  README.md  license.txt  pyproject.toml  requirements.txt
apps/next_ai/next_ai/: hooks.py  modules.txt
apps/next_ai/next_ai/ai/: __init__.py  prompt.py  structured_output.py
apps/next_ai/next_ai/config/: desktop.py  docs.py
apps/next_ai/next_ai/docs/: dependency_resolve.md  how-to-setup.md
apps/next_ai/next_ai/fixtures/: nextai_model_info.json  role.json
config/: nginx.conf  (+4 more)
(+2382 files in other folders)
